<resources>
    <string name="app_name">Información Coronavirus</string>
    <string name="app_name2">Acerca de los sintomas</string>
    <string name="title">COVID-19</string>
    <string name="titulo">Coronavirus</string>
    <string name="nombre">Nombre:</string>
    <string name="edad">Edad</string>
    <string name="texto">La pandemia de enfermedad por coronavirus de 2019-2020 es una pandemia derivada de la enfermedad por coronavirus iniciada en 2019 (COVID-19), ocasionada por el virus coronavirus 2 del síndrome respiratorio agudo grave (SARS-CoV-2).4​5​ Se identificó por primera vez en el mes de Diciembre del año 2019 en la ciudad de Wuhan,6​ capital de la provincia de Hubei, en China central, al reportarse casos de un grupo de personas enfermas con una tipo de neumonía desconocida. Los individuos afectados con el mal, tenían vinculación con trabajadores del mercado mayorista de mariscos del sur de China. 7​8​ La OMS la reconoció como una pandemia global el 11 de marzo de 2020.9​ A la fecha de 18 de abril de 2020, se han informado de más de 2,3 millones de casos de la enfermedad en más de 210 países y territorios en el mundo. Las estadísticas publicadas a diario por fuentes varias, arrojan resultados de más de 159 mil muertes y 594 mil casos de personas que estan en proceso de recuperación.10​11​ La lista de siete países con mayor número de infectados son Estados Unidos, España, Italia, Alemania, Francia, Reino Unido y Turquía.</string>
    <string name="virus">Virus</string>
    <string name="sintomas">Sintomas</string>
    <string name="indicaciones">Indicaciones</string>
    <string name="informacion">Los coronavirus son una familia de virus que pueden causar enfermedades como el resfriado común, el síndrome respiratorio agudo grave (SARS, por sus siglas en inglés), y el síndrome respiratorio de Oriente Medio (MERS, por sus siglas en inglés). En 2019 se identificó un nuevo coronavirus como la causa de un brote de enfermedades que se originó en China.  Este virus ahora se conoce como el síndrome respiratorio agudo grave coronavirus 2 (SARS-CoV-2). La enfermedad que causa se llama enfermedad del coronavirus 2019 (COVID-19). En marzo de 2020 la Organización Mundial de la Salud (OMS) declaró que este brote deCOVID-19es una pandemia.  Las organizaciones de salud pública, incluyendo los Centros para el Control y la Prevención de Enfermedades de los Estados Unidos (CDC) y(OMS)están vigilando la pandemia y publicando actualizaciones en sus sitios web. Estos grupos también han publicado recomendaciones para prevenir y tratar esta enfermedad.</string>
    <string name="comentar">Comentar</string>
    <string name="info2">En los últimos años se han descrito tres brotes epidémicos importantes causados por nuevos coronavirus:  Covid-19/ SARS-CoV-2: A finales de diciembre de 2019 se notificaron los primeros casos de un nuevo coronavirus en la ciudad de Wuhan (China). Desde entonces el aumento de nuevos infectados por el virus SARS-CoV-2 (inicialmente llamado 2019nCoV), que provoca la enfermedad denominada Covid-19, ha sido continuo y su transmisión de persona a persona se ha acelerado. Los casos declarados ya superan con creces a los de la epidemia de SARS de 2002-2003. Su tasa de letalidad es más baja, pero se están produciendo muchos más fallecimientos (rebasan los 100.000, según las cifras oficiales) porque las personas infectadas ya se cuentan por millones en todo el mundo.  La Organización Mundial de la Salud (OMS) ha declarado la situación de pandemia. Hay personas infectadas en la mayoría de los países y los profesionales sanitarios insisten en la necesidad de seguir las medidas preventivas y evitar la alarma social.  En España y otros países se ha decretado el estado de alarma y las autoridades consideran crucial respetar la obligación de permanecer en casa para contener la transmisión.  SARS-CoV: El síndrome respiratorio agudo y grave (SARS, también conocido como SRAS y SRAG) se inició en noviembre de 2002 en China, afectó a más de 8.000 personas en 37 países y provocó más de 700 muertes. La mortalidad del SRAS-Cov se ha cifrado en el 10% aproximadamente.  MERS-CoV: El coronavirus causante del síndrome respiratorio de Oriente Medio (MERS) fue detectado por primera vez en 2012 en Arabia Saudita. Se han notificado hasta octubre de 2019 más de 2.400 casos de infección en distintos países, con más de 800 muertes. La letalidad es, por tanto, del 35%.</string>
    <string name="sintom">En general, los síntomas principales de las infecciones por coronavirus pueden ser los siguientes. Dependerá del tipo de coronavirus y de la gravedad de la infección:  Tos.   Dolor de garganta.   Fiebre.   Dificultad para respirar (disnea).   Dolor de cabeza.   Pérdida del sentido del olfato y del gusto.   Manifestaciones en la piel como sabañones en manos y pies (sobre todo en niños y adolescentes) urticaria con y sin picor o eritema multiforme.   Escalofríos y malestar general.   Obstrucción nasal, secreción y goteo. En espectro clínico de este tipo de infecciones varía desde la ausencia de síntomas hasta síntomas respiratorios leves o agudos. Esta tipología suele cursar con tos, fiebre y dificultades respiratorias. Es frecuente que haya neumonía y, en el caso del MERS, también se pueden registrar síntomas gastrointestinales, en especial, diarrea.  Tal y como ocurre con el virus de la gripe, los síntomas más graves (y la mayor mortalidad) se registra tanto en personas mayores como en aquellos individuos con inmunodepresión o con enfermedades crónicas como diabetes, algunos tipos de cáncer o enfermedad pulmonar crónica. En los casos más graves pueden ocasionar insuficiencia respiratoria.  En la pandemia de Covid-19 se ha constatado que en torno al 80% de las personas infectadas presentan síntomas leves.</string>
    <string name="indicacion">"Auto-aislamiento  El documento especifica que el confinamiento debe hacer en una habitación individual, que tenga una ventana y, a ser posible, un baño individual. La puerta de la habitación debe mantenerse cerrada.  Si no se puede disponer de una habitación de tales características, se debe extremar la higiene y mantener una distancia de seguridad de dos metros con el resto de personas que habiten la casa.  Mantenerse comunicado  La persona con estos síntomas debe tener disponible un teléfono a través del cual informar de las necesidades que vayan surgiendo. Además, de esta forma podrá mantener la comunicación con sus seres queridos.  Llamar en caso de sensación de gravedad  El decálogo preparado por Sanidad sobre cómo actuar en casos de notar síntomas de coronavirus indica, sin rodeos, que en caso de notar falta de aire o una sensación de gravedad por cualquier otro síntoma, debe llamarse al 112.  Llamar al teléfono de la comunidad autónoma  Otra de las posibilidades telefónicas para ser atendido es llamar a los teléfonos que cada comunidad autónoma ha habilitado para informar y atender casos de posibles contagios en la distancia. También existe la opción de contactar con el centro de salud más cercano a través del teléfono. "</string>
</resources>
